--- a/app/src/main/res/layout/activity_create_habit.xml
+++ b/app/src/main/res/layout/activity_create_habit.xml
@@ -43,6 +43,7 @@
 
         <Button
             android:id="@+id/btn_save"
+            android:onClick="storeHabit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/save" />
